# Physfs4Cpp

./: CMakeLists.txt  LICENSE.txt  Physfs4Cpp.pro  README.md
include/: Physfs4Cpp.hpp
src/: Physfs4Cpp.cpp
